[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "tower-server"
path = "src/server.rs"

[dependencies]
chrono = "0.4"
console = "0.9.0"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"
